--- a/Login App/app/src/main/AndroidManifest.xml
+++ b/Login App/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Container"></activity>
+        <activity android:name=".Truck"></activity>
+        <activity android:name=".Container" />
         <activity android:name=".Menu" />
         <activity android:name=".MainActivity">
             <intent-filter>
